Upgraded from J2SE1.4 to SE11; linter happy now.